[chore] jobs/info 接口新增收藏状态
