# internal/router/job.go
@@ -10,11 +10,11 @@ func InitJobRouter(deps RouterDeps, r *gin.RouterGroup) {
 	noAuthRouter := r.Group("/")
 	{
 		noAuthRouter.POST("/jobs/list", deps.JobHandler.List)
-		noAuthRouter.POST("/jobs/info", deps.JobHandler.Info)
 	}
 
 	strictAuthRouter := r.Group("/").Use(middleware.StrictAuth(deps.JWT, deps.Logger))
 	{
+		strictAuthRouter.POST("/jobs/info", deps.JobHandler.Info)
 		strictAuthRouter.POST("/jobs/create", deps.JobHandler.Create)
 		strictAuthRouter.POST("/jobs/update", deps.JobHandler.Update)
 		strictAuthRouter.POST("/jobs/refresh", deps.JobHandler.Refresh)
